start for reproduction

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <!--==================== CSS ====================-->
       <link rel="stylesheet" href="assets/css/styles.css" />
 
-      <title>Responsive Portfolio Website</title>
+      <title>- Stefan Maximilian -</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="#" class="nav__logo">Alexa</a>
+            <a href="#" class="nav__logo">Stefan</a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list grid">
@@ -138,7 +138,7 @@
                   </div>
 
                   <div class="home__data">
-                     <h1 class="home__title">Hi, I am Alexa</h1>
+                     <h1 class="home__title">Hi, I am Stefan</h1>
                      <h3 class="home__subtitle">Fontend developer</h3>
                      <p class="home__description">
                         High level experience in web design and development
