--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <!--==================== CSS ====================-->
       <link rel="stylesheet" href="assets/css/styles.css" />
 
-      <title>- Stefan Maximilian -</title>
+      <title>stefan-maximilian.ch</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="#" class="nav__logo">Stefan</a>
+            <a href="#" class="nav__logo">Stefan Maximilian</a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list grid">
@@ -139,7 +139,7 @@
 
                   <div class="home__data">
                      <h1 class="home__title">Hi, I am Stefan</h1>
-                     <h3 class="home__subtitle">Fontend developer</h3>
+                     <h3 class="home__subtitle">Frontend developer</h3>
                      <p class="home__description">
                         High level experience in web design and development
                         knowledge, producing quality work.
