worked till "services"

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                         </div>
 
                         <div>
-                           <h3 class="qualification__title">SAP Production & SupplyChain</h3>
+                           <h3 class="qualification__title">SAP Production &<br> SupplyChain</h3>
                            <span class="qualification__subtitle">
                                3M Dyneon
                            </span>
@@ -492,7 +492,7 @@
                      <!--==================== QUALIFICATION 3 ====================-->
                      <div class="qualification__data">
                         <div>
-                           <h3 class="qualification__title">Certificate of Heating Plant Specialist</h3>
+                           <h3 class="qualification__title">Certificate of Heating<br> Plant Specialist</h3>
                            <span class="qualification__subtitle">
                               Switzerland - UTECH
                            </span>
@@ -558,7 +558,7 @@
       </div>
       <div>
          <h3 class="qualification__title">
-            Industrial and Pharmaceutical Technologist (GMP)
+            Industrial and Pharmaceutical<br> Technologist (GMP)
          </h3>
          <span class="qualification__subtitle">
             Novartis - Basel, Switzerland
@@ -573,7 +573,7 @@
    <!--==================== QUALIFICATION 3 ====================-->
    <div class="qualification__data">
       <div>
-         <h3 class="qualification__title">Leader Utilities & Sr. Production Coordinator</h3>
+         <h3 class="qualification__title">Leader Utilities &<br> Sr. Production Coordinator</h3>
          <span class="qualification__subtitle">
             SI Group - Switzerland
          </span>
@@ -596,7 +596,7 @@
          <span class="qualification__line"></span>
       </div>
       <div>
-         <h3 class="qualification__title">Manager - Process Improvement, Global Utilities</h3>
+         <h3 class="qualification__title">Manager - Process Improvement,<br> Global Utilities</h3>
          <span class="qualification__subtitle">
             SI Group - Switzerland
          </span>
