--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                   <div>
                      <i class="uil uil-web-grid services__icon"></i>
                      <h3 class="services__title">
-                        Ui/Ux <br />
+                        KPI & OEE <br />
                         Designer
                      </h3>
                   </div>
@@ -638,7 +638,7 @@
                   <div class="services__modal">
                      <div class="fproject__bg">
                         <h4 class="services__modal-title">
-                           Ui/Ux <br />
+                           KPI & OEE <br />
                            Designer
                         </h4>
                         <i class="uil uil-times services__modal-close"></i>
@@ -651,7 +651,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I develop the user interface.</p>
+                              <p>Develop advanced KPI & OEE Dashboards</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -661,7 +661,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>Web page development.</p>
+                              <p>MVAR, Consumption and Yield Tracking</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -671,7 +671,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I create ux element interactions.</p>
+                              <p>OSIsoft PI & MS Excel Consulting</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -681,7 +681,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I position your company brand.</p>
+                              <p>Digital SPC Control Charts</p>
                            </li>
                         </ul>
                      </div>
@@ -693,8 +693,8 @@
                   <div>
                      <i class="uil uil-arrow services__icon"></i>
                      <h3 class="services__title">
-                        Frontend <br />
-                        Developer
+                        Workflow <br />
+                        Management
                      </h3>
                   </div>
 
@@ -711,8 +711,8 @@
                   <div class="services__modal">
                      <div class="services__modal-content">
                         <h4 class="services__modal-title">
-                           Frontend <br />
-                           Developer
+                           Workflow <br />
+                           Management
                         </h4>
                         <i class="uil uil-times services__modal-close"></i>
 
@@ -724,7 +724,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I develop the user interface.</p>
+                              <p>Automated data extraction for goods movement (SAP / VBA)</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -734,7 +734,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>Web page development.</p>
+                              <p>Automate SAP procurement process via dynamic VBA prompts (BAMF)</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -744,7 +744,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I create ux element interactions.</p>
+                              <p>Supply Chain List with integrated KPI for orders</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -754,7 +754,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I position your company brand.</p>
+                              <p>CAPEX and project status list</p>
                            </li>
                         </ul>
                      </div>
@@ -766,8 +766,8 @@
                   <div>
                      <i class="uil uil-pen services__icon"></i>
                      <h3 class="services__title">
-                        Branding <br />
-                        Designer
+                        Workforce <br />
+                        Allocator
                      </h3>
                   </div>
 
@@ -784,8 +784,8 @@
                   <div class="services__modal">
                      <div class="services__modal-content">
                         <h4 class="services__modal-title">
-                           Branding <br />
-                           Designer
+                           Workforce <br />
+                           Allocator
                         </h4>
                         <i class="uil uil-times services__modal-close"></i>
 
@@ -797,7 +797,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I develop the user interface.</p>
+                              <p>Track employee assignments to jobs and workstations</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -807,7 +807,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>Web page development.</p>
+                              <p>Calculate shift allowances for weekends, night shifts, and Sundays</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -817,7 +817,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I create ux element interactions.</p>
+                              <p>Manage vacation, flex time, and overtime balances</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -827,7 +827,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>I position your company brand.</p>
+                              <p>KPI Dashboards for all departments, teams, and employees</p>
                            </li>
                         </ul>
                      </div>
