till Portfolie everything DONE

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                      <h1 class="home__title">Hi, I am Stefan</h1>
                      <h3 class="home__subtitle">Data Automation Expert</h3>
                      <p class="home__description">
-                        Certified Data Analyst and expert in SAP, Excel with VBA, SQL, and R. Skilled in HTML & CSS, with a strong interest in Python and JavaScript.
+                        Certified Data Analyst with strong skills in SAP, Excel (VBA), SQL, and R. Experienced in automating processes, KPI tracking, and staff scheduling.
                         
 
                         
@@ -171,7 +171,7 @@
                <img src="assets/img/cortes.jpg" alt="about-me" class="about__img" />
                <div class="about__data">
                   <p class="about__description">
-                     With a strong background in data analytics and process optimization, I specialize in SAP, Excel with advanced VBA, SQL, and R, focusing on industrial applications and efficiency-driven solutions. Alongside these core skills, I’m expanding my technical toolkit with HTML, CSS, Python, and JavaScript, enabling me to deliver versatile, data-driven solutions across analytics and digital projects.
+                     Certified Data Analyst with expertise in SAP, Excel (VBA), SQL, R, and HTML/CSS. Experienced in automating SAP data extraction and integration, with direct transfers to Pivot Tables for efficient analysis. Skilled in workflow automation, KPI & OEE tracking, and staff scheduling. PI OSIsoft Consultant focused on process optimization and system efficiency.
                   </p>
 
                   <div class="about__info">
@@ -296,7 +296,7 @@
                         <div>
                            <h1 class="skills__title">Industrial & Automation Tools</h1>
                            <span class="skills__subtitle"
-                              >More than 2 years</span
+                              >More than 5 years</span
                            >
                         </div>
 
@@ -364,7 +364,7 @@
                         <div>
                            <h1 class="skills__title">Programming & Web Development</h1>
                            <span class="skills__subtitle"
-                              >More than 5 years</span
+                              >More than 2 years</span
                            >
                         </div>
 
@@ -375,7 +375,7 @@
                         <div class="skills__data">
                            <div class="skills__titles">
                               <h3 class="skills__name">Python</h3>
-                              <span class="skils__number">35%</span>
+                              <span class="skils__number">30%</span>
                            </div>
                            <div class="skills__bar">
                               <span
@@ -399,7 +399,7 @@
                         <div class="skills__data">
                            <div class="skills__titles">
                               <h3 class="skills__name">HTML & CSS</h3>
-                              <span class="skils__number">40%</span>
+                              <span class="skils__number">45%</span>
                            </div>
                            <div class="skills__bar">
                               <span
@@ -598,7 +598,7 @@
       <div>
          <h3 class="qualification__title">Manager - Process Improvement,<br> Global Utilities</h3>
          <span class="qualification__subtitle">
-            SI Group - Switzerland
+            SI Group - Global
          </span>
          <div class="qualification__calendar">
             <i class="uil uil-calendar-alt"></i>
