About me - up-to date

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                <img src="assets/img/cortes.jpg" alt="about-me" class="about__img" />
                <div class="about__data">
                   <p class="about__description">
-                     Certified Data Analyst with expertise in SAP, Excel (VBA), SQL, R, and HTML/CSS. Experienced in automating SAP data extraction and integration, with direct transfers to Pivot Tables for efficient analysis. Skilled in workflow automation, KPI & OEE tracking, and staff scheduling. PI OSIsoft Consultant focused on process optimization and system efficiency.
+                     Certified Data Analyst with expertise in SAP, Excel (VBA), SQL, R. Experienced in automating SAP data extraction and integration, for efficient analysis. Skilled in workflow automation, KPI & OEE tracking, and staff scheduling. PI OSIsoft Consultant
                   </p>
 
                   <div class="about__info">
