html: KPI & OEE Designer plugin

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                            </span>
                            <div class="qualification__calendar">
                               <i class="uil uil-calendar-alt"></i>
-                              2019 - 2021
+                              2024 - 2025
                            </div>
                         </div>
                      </div>
@@ -573,7 +573,7 @@
    <!--==================== QUALIFICATION 3 ====================-->
    <div class="qualification__data">
       <div>
-         <h3 class="qualification__title">Leader Utilities &<br> Sr. Production Coordinator</h3>
+         <h3 class="qualification__title">Sr. Production Coordinator &<br>Leader Utilities</h3>
          <span class="qualification__subtitle">
             SI Group - Switzerland
          </span>
@@ -615,78 +615,50 @@
             <span class="section__subtitle">What I offer</span>
 
             <div class="services__container container grid">
-               <!--==================== SERVICES 1 ====================-->
-               <div class="services__content">
-                  <div>
-                     <i class="uil uil-web-grid services__icon"></i>
-                     <h3 class="services__title">
-                        KPI & OEE <br />
-                        Designer
-                     </h3>
-                  </div>
+              <!--==================== SERVICES 1 ====================-->
+<div class="services__content">
+   <div>
+      <i class="uil uil-web-grid services__icon"></i>
+      <h3 class="services__title">
+         KPI & OEE <br />
+         Designer
+      </h3>
+   </div>
 
-                  <span
-                     class="
-                        button button--flex button--small button--link
-                        services__button
-                     "
-                  >
-                     View more
-                     <i class="uil uil-arrow-right button__icon"></i>
-                  </span>
+   <span class="button button--flex button--small button--link services__button">
+      View more
+      <i class="uil uil-arrow-right button__icon"></i>
+   </span>
 
-                  <div class="services__modal">
-                     <div class="fproject__bg">
-                        <h4 class="services__modal-title">
-                           KPI & OEE <br />
-                           Designer
-                        </h4>
-                        <i class="uil uil-times services__modal-close"></i>
+   <div class="services__modal">
+      <div class="services__modal-content"> <!-- Angepasst, wie bei Service 2 und 3 -->
+         <h4 class="services__modal-title">
+            KPI & OEE <br />
+            Designer
+         </h4>
+         <i class="uil uil-times services__modal-close"></i>
 
-                        <ul class="services__modal-services grid">
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>Develop advanced KPI & OEE Dashboards</p>
-                           </li>
-
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>MVAR, Consumption and Yield Tracking</p>
-                           </li>
-
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>OSIsoft PI & MS Excel Consulting</p>
-                           </li>
-
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>Digital SPC Control Charts</p>
-                           </li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
+         <ul class="services__modal-services grid">
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>Develop advanced KPI & OEE Dashboards</p>
+            </li>
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>MVAR, Consumption and Yield Tracking</p>
+            </li>
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>OSIsoft PI & MS Excel Consulting</p>
+            </li>
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>Digital SPC Control Charts</p>
+            </li>
+         </ul>
+      </div>
+   </div>
+</div>
 
                <!--==================== SERVICES 2 ====================-->
                <div class="services__content">
