--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                      <h1 class="home__title">Hi, I am Stefan</h1>
                      <h3 class="home__subtitle">Data Automation Expert</h3>
                      <p class="home__description">
-                        Certified Data Analyst with strong skills in SAP, Excel (VBA), SQL, and R. Experienced in automating processes, KPI tracking, and staff scheduling.
+                        Data Analyst with strong skills in SAP, Excel (VBA), SQL, and R. Experienced in automating processes, KPI tracking, and staff scheduling.
                         
 
                         
@@ -523,7 +523,7 @@
                            </span>
                            <div class="qualification__calendar">
                               <i class="uil uil-calendar-alt"></i>
-                              2019 - 2021
+                              2024 - 2025
                            </div>
                         </div>
                      </div>
@@ -573,7 +573,7 @@
    <!--==================== QUALIFICATION 3 ====================-->
    <div class="qualification__data">
       <div>
-         <h3 class="qualification__title">Leader Utilities &<br> Sr. Production Coordinator</h3>
+         <h3 class="qualification__title">Sr. Production Coordinator &<br>Leader Utilities</h3>
          <span class="qualification__subtitle">
             SI Group - Switzerland
          </span>
@@ -615,78 +615,50 @@
             <span class="section__subtitle">What I offer</span>
 
             <div class="services__container container grid">
-               <!--==================== SERVICES 1 ====================-->
-               <div class="services__content">
-                  <div>
-                     <i class="uil uil-web-grid services__icon"></i>
-                     <h3 class="services__title">
-                        KPI & OEE <br />
-                        Designer
-                     </h3>
-                  </div>
+              <!--==================== SERVICES 1 ====================-->
+<div class="services__content">
+   <div>
+      <i class="uil uil-web-grid services__icon"></i>
+      <h3 class="services__title">
+         KPI & OEE <br />
+         Designer
+      </h3>
+   </div>
 
-                  <span
-                     class="
-                        button button--flex button--small button--link
-                        services__button
-                     "
-                  >
-                     View more
-                     <i class="uil uil-arrow-right button__icon"></i>
-                  </span>
+   <span class="button button--flex button--small button--link services__button">
+      View more
+      <i class="uil uil-arrow-right button__icon"></i>
+   </span>
 
-                  <div class="services__modal">
-                     <div class="fproject__bg">
-                        <h4 class="services__modal-title">
-                           KPI & OEE <br />
-                           Designer
-                        </h4>
-                        <i class="uil uil-times services__modal-close"></i>
+   <div class="services__modal">
+      <div class="services__modal-content"> <!-- Angepasst, wie bei Service 2 und 3 -->
+         <h4 class="services__modal-title">
+            KPI & OEE <br />
+            Designer
+         </h4>
+         <i class="uil uil-times services__modal-close"></i>
 
-                        <ul class="services__modal-services grid">
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>Develop advanced KPI & OEE Dashboards</p>
-                           </li>
-
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>MVAR, Consumption and Yield Tracking</p>
-                           </li>
-
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>OSIsoft PI & MS Excel Consulting</p>
-                           </li>
-
-                           <li class="services__modal-service">
-                              <i
-                                 class="
-                                    uil uil-check-circle
-                                    services__modal-icon
-                                 "
-                              ></i>
-                              <p>Digital SPC Control Charts</p>
-                           </li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
+         <ul class="services__modal-services grid">
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>Develop advanced KPI & OEE Dashboards</p>
+            </li>
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>MVAR, Consumption and Yield Tracking</p>
+            </li>
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>OSIsoft PI & MS Excel Consulting</p>
+            </li>
+            <li class="services__modal-service">
+               <i class="uil uil-check-circle services__modal-icon"></i>
+               <p>Digital SPC Control Charts</p>
+            </li>
+         </ul>
+      </div>
+   </div>
+</div>
 
                <!--==================== SERVICES 2 ====================-->
                <div class="services__content">
@@ -744,7 +716,7 @@
                                     services__modal-icon
                                  "
                               ></i>
-                              <p>Supply Chain List with integrated KPI for orders</p>
+                              <p>Developing tools to streamline inventories, ensuring effortless and fully KPMG/PwC-verified processes.</p>
                            </li>
 
                            <li class="services__modal-service">
@@ -852,10 +824,13 @@
                      />
 
                      <div class="portfolio__data">
-                        <h3 class="portfolio__title">Modern Website</h3>
+                        <h3 class="portfolio__title">Dynamic SAP Transactions via VBA</h3>
                         <p class="portfolio__description">
-                           Website adaptable to all devices, with ui components
-                           and animated interactions.
+                           Developed dynamic SAP queries through VBA in Excel, allowing flexible 
+                           inputs via cell references for dynamic content. This solution enables
+                           seamless data export from SAP to Excel or direct data entry from Excel back into SAP,
+                           enhancing automation and minimizing manual input. The system simplifies data manipulation,
+                           improving efficiency for ongoing SAP transactions.
                         </p>
                         <a href="" class="button button--flex button--small portfolio__button">
                            Demo
@@ -873,10 +848,15 @@
                      />
 
                      <div class="portfolio__data">
-                        <h3 class="portfolio__title">Brand Design</h3>
+                        <h3 class="portfolio__title">Dynamic SPC Chart Integration</h3>
                         <p class="portfolio__description">
-                           Website adaptable to all devices, with ui components
-                           and animated interactions.
+                           Created a dynamic SPC control chart in Excel with SQL integration,
+                           automatically pulling data into Excel tables.
+                           Using Excel 365 filters, only relevant data for each chart/trend is displayed,
+                           while a VBA macro enables seamless switching between charts.
+                           This allows for automatic switching across product families,
+                           providing an overview of all analyses, systems, and utilities—ideal
+                           for command and shift leader offices.
                         </p>
                         <a href="" class="button button--flex button--small portfolio__button">
                            Demo
@@ -894,10 +874,14 @@
                      />
 
                      <div class="portfolio__data">
-                        <h3 class="portfolio__title">Online Store</h3>
+                        <h3 class="portfolio__title">Dynamic Shift and Resource Planning</h3>
                         <p class="portfolio__description">
-                           Website adaptable to all devices, with ui components
-                           and animated interactions.
+                           Developed a dynamic shift and resource planning system in Excel, integrating
+                           real-time data inputs and automated scheduling. The solution allows for flexible
+                           assignment of tasks and shifts, optimizing resource allocation based on operational
+                           needs. With automated updates and visual tracking, this tool enhances planning efficiency,
+                           minimizes scheduling conflicts, and ensures optimal workforce utilization
+                           across all shifts and teams. Ideal for streamlining operations and improving shift management.
                         </p>
                         <a href="" class="button button--flex button--small portfolio__button">
                            Demo
@@ -917,33 +901,37 @@
             </div>
          </section>
 
-         <!--==================== PROJECT IN MIND ====================-->
-         <section class="project section">
-            <div class="project__bg">
-               <div class="project__container container grid">
-                  <div class="project__data">
-                     <h2 class="project__title">You have a new project</h2>
-                     <p class="project__description">Contact me now and get a 30% discount on your new project.</p>
-                     <a href="#contact" class="button button--flex button--white">
-                        Contact Me
-                        <i class="uil uil-message project__icon button__icon"></i>
-                     </a>
-                  </div>
+     <!--==================== PROJECT IN MIND ====================-->
+<section class="project section">
+   <div class="project__bg">
+      <div class="project__container container grid">
+         <div class="project__data">
+            <h2 class="project__title">Let’s work together on your next project!</h2>
+            <p class="project__description">
+               I’m excited to hear about your ideas! Feel free to reach out for a consultation or more information. 
+               You can contact me via Teams or phone, and I’ll be happy to discuss your project in detail.
+            </p>
+            <a href="#contact" class="button button--flex button--white">
+               Contact Me
+               <i class="uil uil-message project__icon button__icon"></i>
+            </a>
+         </div>
 
-                  <img src="assets/img/project.png" alt="" class="project__img">
-               </div>
-            </div>
+         <img src="assets/img/cortes.jpg" alt="Project Image" class="project__img">
+      </div>
+   </div>
+</section>
 
-         </section>
 
-         <!--==================== TESTIMONIAL ====================-->
+
+         <!--==================== TESTIMONIAL ====================
          <section class="testimonial section">
             <h2 class="section__title">Testimonal</h2>
             <span class="section__subtitle">My client saying</span>
 
             <div class="testimonal__container container swiper mySwiper">
                <div class="swiper-wrapper">
-                  <!--==================== TESTIMONIAL 1 ====================-->
+                  <!--==================== TESTIMONIAL 1 ====================
                   <div class="testimonal__content swiper-slide">
                      <div class="testimonial__data">
                         <div class="testimonial__header">
@@ -968,7 +956,7 @@
 
                   </div>
 
-                  <!--==================== TESTIMONIAL 2 ====================-->
+                  <!--==================== TESTIMONIAL 2 ====================
                   <div class="testimonal__content swiper-slide">
                      <div class="testimonial__data">
                         <div class="testimonial__header">
@@ -993,7 +981,7 @@
 
                   </div>
 
-                  <!--==================== TESTIMONIAL 3 ====================-->
+                  <!--==================== TESTIMONIAL 3 ====================
                   <div class="testimonal__content  swiper-slide">
                      <div class="testimonial__data">
                         <div class="testimonial__header">
@@ -1022,6 +1010,7 @@
             </div>
          </section>
 
+         -->
          <!--==================== CONTACT ME ====================-->
          <section class="contact section" id="contact">
             <h2 class="section__title">Contact Me</h2>
