--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
 
                      <div>
                         <h3 class="contact__title">Call Me</h3>
-                        <span class="contact__subtitle">999-777-666</span>
+                        <span class="contact__subtitle">+41 76 376 1864</span>
                      </div>
                   </div>
 
@@ -1031,7 +1031,7 @@
 
                      <div>
                         <h3 class="contact__title">Email</h3>
-                        <span class="contact__subtitle">alexa@email.com</span>
+                        <span class="contact__subtitle">info@stefan-maximilian.ch</span>
                      </div>
                   </div>
 
@@ -1040,7 +1040,7 @@
 
                      <div>
                         <h3 class="contact__title">Location</h3>
-                        <span class="contact__subtitle">Peru - Lima Av. Bolivar #123</span>
+                        <span class="contact__subtitle">Basel - Switzerland</span>
                      </div>
                   </div>
                </div>
