--- a/index.html
+++ b/index.html
@@ -1090,8 +1090,8 @@
          <div class="footer__bg">
             <div class="footer__container container grid">
                <div>
-                  <h1 class="footer__title">Alexa</h1>
-                  <span class="footer__subtitle">Fronted developer</span>
+                  <h1 class="footer__title">Stefan Maximilian</h1>
+                  <span class="footer__subtitle">Data Automation Expert</span>
                </div>
 
                <ul class="footer__links">
