update text on projects

--- a/index.html
+++ b/index.html
@@ -850,13 +850,9 @@
                      <div class="portfolio__data">
                         <h3 class="portfolio__title">Dynamic SPC Chart Integration</h3>
                         <p class="portfolio__description">
-                           Created a dynamic SPC control chart in Excel with SQL integration,
-                           automatically pulling data into Excel tables.
-                           Using Excel 365 filters, only relevant data for each chart/trend is displayed,
-                           while a VBA macro enables seamless switching between charts.
-                           This allows for automatic switching across product families,
-                           providing an overview of all analyses, systems, and utilities—ideal
-                           for command and shift leader offices.
+                           Created a dynamic SPC control chart in Excel with SQL integration, automatically pulling and filtering
+                            relevant data. A VBA macro enables seamless switching between product families, offering comprehensive
+                            analysis for commando-room and shift leader offices.
                         </p>
                         <a href="" class="button button--flex button--small portfolio__button">
                            Demo
@@ -876,12 +872,9 @@
                      <div class="portfolio__data">
                         <h3 class="portfolio__title">Dynamic Shift and Resource Planning</h3>
                         <p class="portfolio__description">
-                           Developed a dynamic shift and resource planning system in Excel, integrating
-                           real-time data inputs and automated scheduling. The solution allows for flexible
-                           assignment of tasks and shifts, optimizing resource allocation based on operational
-                           needs. With automated updates and visual tracking, this tool enhances planning efficiency,
-                           minimizes scheduling conflicts, and ensures optimal workforce utilization
-                           across all shifts and teams. Ideal for streamlining operations and improving shift management.
+                           Developed a dynamic Excel-based shift and resource planning tool with real-time data
+                           integration and automated scheduling. It optimizes resource allocation, minimizes conflicts,
+                           and enhances workforce efficiency with automated updates and visual tracking.
                         </p>
                         <a href="" class="button button--flex button--small portfolio__button">
                            Demo
