chenged portfolio describtion

--- a/index.html
+++ b/index.html
@@ -826,11 +826,9 @@
                      <div class="portfolio__data">
                         <h3 class="portfolio__title">Dynamic SAP Transactions via VBA</h3>
                         <p class="portfolio__description">
-                           Developed dynamic SAP queries through VBA in Excel, allowing flexible 
-                           inputs via cell references for dynamic content. This solution enables
-                           seamless data export from SAP to Excel or direct data entry from Excel back into SAP,
-                           enhancing automation and minimizing manual input. The system simplifies data manipulation,
-                           improving efficiency for ongoing SAP transactions.
+                           Developed dynamic SAP queries in Excel using VBA, enabling flexible inputs via cell references.
+                           This system automates SAP-Excel data exchange, streamlining transactions and minimizing manual
+                           input for improved efficiency.
                         </p>
                         <a href="" class="button button--flex button--small portfolio__button">
                            Demo
