--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   <div class="about__buttons">
                      <a
                         download=""
-                        href="assets/pdf/Alexa-Cv.pdf"
+                        href="assets/pdf/stefan-cv.pdf"
                         class="button button--flex"
                      >
                         Download CV<i
@@ -818,7 +818,7 @@
                   <!--==================== PORTFOLIO 1 ====================-->
                   <div class="portfolio__content grid swiper-slide">
                      <img
-                        src="assets/img/portfolio1.jpg"
+                        src="assets/img/portfolio1.png"
                         alt=""
                         class="portfolio__img"
                      />
@@ -840,7 +840,7 @@
                   <!--==================== PORTFOLIO 2 ====================-->
                   <div class="portfolio__content grid swiper-slide">
                      <img
-                        src="assets/img/portfolio2.jpg"
+                        src="assets/img/portfolio2.png"
                         alt=""
                         class="portfolio__img"
                      />
@@ -862,7 +862,7 @@
                   <!--==================== PORTFOLIO 3 ====================-->
                   <div class="portfolio__content grid swiper-slide">
                      <img
-                        src="assets/img/portfolio3.jpg"
+                        src="assets/img/portfolio3.png"
                         alt=""
                         class="portfolio__img"
                      />
