--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                   <!--==================== PORTFOLIO 1 ====================-->
                   <div class="portfolio__content grid swiper-slide">
                      <img
-                        src="assets/img/portfolio1.png"
+                        src="assets/img/portfolio1.jpg"
                         alt=""
                         class="portfolio__img"
                      />
@@ -862,7 +862,7 @@
                   <!--==================== PORTFOLIO 3 ====================-->
                   <div class="portfolio__content grid swiper-slide">
                      <img
-                        src="assets/img/portfolio3.png"
+                        src="assets/img/portfolio3.jpg"
                         alt=""
                         class="portfolio__img"
                      />
@@ -892,7 +892,7 @@
             </div>
          </section>
 
-     <!--==================== PROJECT IN MIND ====================-->
+     <!--==================== PROJECT IN MIND ====================
 <section class="project section">
    <div class="project__bg">
       <div class="project__container container grid">
@@ -911,7 +911,8 @@
          <img src="assets/img/cortes.jpg" alt="Project Image" class="project__img">
        </div>
       </div>
-      </section>
+      </section>-->
+   
 
 
 
