--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                      />
 
                      <div class="portfolio__data">
-                        <h3 class="portfolio__title">Dynamic SAP Transactions via VBA</h3>
+                        <h3 class="portfolio__title">Dynamic SAP Queries via VBA</h3>
                         <p class="portfolio__description">
                            Developed dynamic SAP queries in Excel using VBA, enabling flexible inputs via cell references.
                            This system automates SAP-Excel data exchange, streamlining transactions and minimizing manual
@@ -868,7 +868,7 @@
                      />
 
                      <div class="portfolio__data">
-                        <h3 class="portfolio__title">Dynamic Shift and Resource Planning</h3>
+                        <h3 class="portfolio__title">Dynamic Shift and Resource Tool</h3>
                         <p class="portfolio__description">
                            Developed a dynamic Excel-based shift and resource planning tool with real-time data
                            integration and automated scheduling. It optimizes resource allocation, minimizes conflicts,
