--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                <div class="home__content grid">
                   <div class="home__social">
                      <a
-                        href="https://www.linkedin.com/in/stefan-schindlmaier-0b73b0150/"
+                        href="https://www.linkedin.com/in/stefan-maximilian-schindlmaier-0b73b0150"
                         target="_blank"
                         class="home__social-icon"
                      >
@@ -88,11 +88,11 @@
                      </a>
 
                      <a
-                        href="https://dribbble.com/"
+                        href="https://x.com/SAPLinkMaster"
                         target="_blank"
                         class="home__social-icon"
                      >
-                        <i class="uil uil-dribbble"></i>
+                        <i class="uil uil-twitter"></i>
                      </a>
 
                      <a
@@ -203,7 +203,7 @@
                   <div class="about__buttons">
                      <a
                         download=""
-                        href="assets/pdf/stefan-cv.pdf"
+                        href="assets/pdf/CV.pdf"
                         class="button button--flex"
                      >
                         Download CV<i
@@ -868,7 +868,7 @@
                      />
 
                      <div class="portfolio__data">
-                        <h3 class="portfolio__title">Dynamic Shift and Resource Tool</h3>
+                        <h3 class="portfolio__title">Dynamic Shift & Resource Tool</h3>
                         <p class="portfolio__description">
                            Developed a dynamic Excel-based shift and resource planning tool with real-time data
                            integration and automated scheduling. It optimizes resource allocation, minimizes conflicts,
@@ -1094,7 +1094,7 @@
                      <i class="uil uil-instagram"></i>
                   </a>
 
-                  <a href="https://twitter.com/" target="_black" class="footer__social">
+                  <a href="https://x.com/SAPLinkMaster" target="_black" class="footer__social">
                      <i class="uil uil-twitter-alt"></i>
                   </a>
                </div>               
